[package]
name = "xin"
version = "0.1.0"
authors = ["cljvm <wj3000@gmail.com>"]
# build = "build.rs"

[dependencies]
actix-web = "0.7"
actix = "0.7"

uuid = { version = "0.6", features = ["serde", "v4"] }
jsonwebtoken = "5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3", features = ["postgres", "r2d2", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
dotenv = "0.13"
log = "0.4"
env_logger = "0.5"

# des = "0.1.0"

actix-web-httpauth = "0.1"
chrono = { version = "^0.4.3", features = ["serde", "clock"] }
http = "~0.1"
failure = "~0.1"
tera = "0.11"
mime = "0.3.7"

lettre = "0.8"
lettre_email = "0.8"
